Requisitos 1 a 5 talvez ok

--- a/index.html
+++ b/index.html
@@ -1,17 +1,64 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paleta de Cores</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1 id="title">Paleta de cores</h1>
     </header>
     <main>
+        <div id="color-palette">
+            <div class="color" id="black"></div>
+            <div class="color" id="blue"></div>
+            <div class="color" id="yellow"></div>
+            <div class="color" id="gray"></div>
+        </div>
         
+        <div id="pixel-board">
+            <div id="line-one">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+            </div>
+
+            <div id="line-two">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+            </div>
+
+            <div id="line-three">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+            </div>
+
+            <div id="line-four">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+            </div>
+
+            <div id="line-five">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+            </div>
     </main>
 </body>
 </html>
