--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <div id="color-palette">
-            <div class="color" id="black"></div>
+            <div class="color" class="selected" id="black"></div>
             <div class="color" id="blue"></div>
             <div class="color" id="yellow"></div>
             <div class="color" id="gray"></div>
@@ -60,5 +60,6 @@
                 <div class="pixel"></div>
             </div>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
