Requisito 8 ainda  não pinta pixels e Requisito 9 funciona no console mas no último teste não passa (deve ser pq o 8 não funciona)

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
             <div class="color" id="gray"></div>
         </div>
         
+        <section class="buttons-container"></section>
+
         <div id="pixel-board">
-            <div id="line-one">
+            <div class="line">
                 <div class="pixel"></div>
                 <div class="pixel"></div>
                 <div class="pixel"></div>
@@ -28,7 +30,7 @@
                 <div class="pixel"></div>
             </div>
 
-            <div id="line-two">
+            <div class="line">
                 <div class="pixel"></div>
                 <div class="pixel"></div>
                 <div class="pixel"></div>
@@ -36,7 +38,7 @@
                 <div class="pixel"></div>
             </div>
 
-            <div id="line-three">
+            <div class="line">
                 <div class="pixel"></div>
                 <div class="pixel"></div>
                 <div class="pixel"></div>
@@ -44,7 +46,7 @@
                 <div class="pixel"></div>
             </div>
 
-            <div id="line-four">
+            <div class="line">
                 <div class="pixel"></div>
                 <div class="pixel"></div>
                 <div class="pixel"></div>
@@ -52,7 +54,7 @@
                 <div class="pixel"></div>
             </div>
 
-            <div id="line-five">
+            <div class="line">
                 <div class="pixel"></div>
                 <div class="pixel"></div>
                 <div class="pixel"></div>
