--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <main>
         <div id="color-palette">
             <div class="color" id="black"></div>
-            <div class="color" id="blue"></div>
-            <div class="color" id="yellow"></div>
-            <div class="color" id="gray"></div>
+            <div class="color"></div>
+            <div class="color"></div>
+            <div class="color"></div>
         </div>
         
         <section class="buttons-container"></section>
